// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in <Results/> should display the component correctly 1`] = `
Array [
  <div>
    <div
      className="loader"
    >
      <img
        alt="loader"
        src="loader.gif"
      />
    </div>
  </div>,
  "",
]
`;

exports[`Test in <Results/> should display the component correctly 2`] = `
Object {
  "action": "PUSH",
  "length": 2,
  "location": Object {
    "hash": "",
    "key": "q06uc0",
    "pathname": "/items",
    "search": "?search=monitor curvo",
  },
}
`;

exports[`Test in <Results/> should display the component correctly 3`] = `
Object {
  "hash": "",
  "key": "q06uc0",
  "pathname": "/items",
  "search": "?search=monitor curvo",
}
`;
